[fix][ui] Receive form was uneven and looked bad

--- a/frontend/static/stylesheets/common.css
+++ b/frontend/static/stylesheets/common.css
@@ -16,7 +16,6 @@
 }
 
 .flex-right-align {
-    align-items: right;
     justify-content: flex-end;
 }
 
@@ -25,20 +24,24 @@
     justify-content: flex-start;
 }
 
+.flex-grow-item {
+    flex-grow: 3;
+}
+
+.flex-no-grow {
+    flex-grow: 0;
+    width: fit-content;
+    max-width: fit-content;
+}
+
 /* should be used by row class */
 .vertical-margins {
     margin-top: 1%;
     margin-bottom: 1%;
 }
 
-/* Clear floats after the columns */
-.row .flex-container {
-    display: flex;
-    flex-flow: row;
-}
-
-.child-shink-fit {
-    width: auto; /* auto resize to fit line*/
+.margin-left {
+    margin-left: 2%;
 }
 
 .block {
@@ -54,4 +57,17 @@
 
 .grow-full-width {
     width: 100%;
+}
+
+.flex-inline {
+    display: inline-flex;
+    /*Add each item as a "column" so that they stay in the same line*/
+    flex-direction: column;
+    flex-flow: row;
+    flex-wrap: nowrap;
+    flex-shrink: 0;
+    flex-grow: 0;
+    flex-basis: 100%;
+    width: 100%;
+    height: 100%;
 }
